--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradiantbackground"
     tools:context=".ui.home.HomeFragment">
 
     <EditText
@@ -54,6 +55,8 @@
         app:layout_constraintTop_toBottomOf="@id/sp_difficulty"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/black_light"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
