--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_4">#27ae60</color>
+    <color name="green_3">#05ba12</color>
+    <color name="green_2">#7bed9f</color>
+    <color name="black_light">#332d2d</color>
 </resources>
