--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/main">
+    android:layout_height="match_parent">
+
+    <com.google.ar.sceneform.ArSceneView
+        android:id="@+id/ar_scene_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
         android:id="@+id/zxing_barcode_scanner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:visibility="gone">
 
         <com.journeyapps.barcodescanner.ViewfinderView
             android:id="@+id/zxing_viewfinder_view"
@@ -27,8 +31,10 @@
         android:id="@+id/btn_new_scan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Scan_QR"
+        android:text="New Scan"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="36dp"/>
+
+
 
 </FrameLayout>
