--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -28,5 +28,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="16dp"
-        android:padding="16dp"/>
+        android:padding="16dp"
+        android:layout_marginBottom="48dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
