--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -49,6 +49,7 @@
         android:layout_marginTop="16dp"
         android:text="Demarrer partie"
         android:textSize="25dp"
+        android:enabled="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_download" />
